# agentic-ai

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  main.tsx
templates/: .env-sample  mcp_config.json
